Revert "stop logo from making page jump"
This reverts commit 75557f7734cc01c953fef0b62794fb7cf909bbd8.

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7115,10 +7115,6 @@ body > .container {
 	}
 }
 
-#logo-WPD, #logo-rDrama {
-	height: 100%;
-}
-
 @media (min-width: 1400px) {
 	.awardmodal {
 		max-width: min(90%, 1200px) !important
